--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,9 @@ quicli = "0.2.0"
 reqwest = "0.8.4"
 serde_json = "1.0.9"
 tar = "0.4.14"
-
-[dependencies.rustfmt-core]
-git = "https://github.com/rust-lang-nursery/rustfmt.git"
+regex = "0.2.6"
+quote = "0.4.2"
 
 [dependencies.syn]
-features = ["derive", "full"]
+features = ["derive", "full", "visit", "extra-traits"]
 version = "0.12.12"
